# WinNative

./: .gitmodules  README.md  settings.gradle  ua_full_diff.txt
.github/workflows/: pr-ci.yml  pr-release-publish.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/app/: PluviaApp.kt
app/src/main/app/db/: PluviaDatabase.kt
app/src/main/app/db/download/: DownloadRecord.kt  DownloadRecordDao.kt
app/src/main/app/di/: DatabaseModule.kt
app/src/main/app/service/: DownloadService.kt
app/src/main/app/service/download/: DownloadCoordinator.kt
app/src/main/app/shell/: UnifiedActivity.kt
app/src/main/app/update/: UpdateChecker.kt
app/src/main/assets/box86_64/: default.box64rc  lightsteam.box64rc  ultralightsteam.box64rc
app/src/main/assets/graphics_driver/: wrapper.tzst
app/src/main/assets/inputcontrols/profiles/: controls-3.icp  controls-5.icp  controls-6.icp
app/src/main/assets/metadata/: box64_env_vars.json  fexcore_env_vars.json
app/src/main/assets/steaminput/: controller_xboxone_gamepad_fps.vdf  controller_xboxone_wasd.vdf
app/src/main/assets/wincomponents/: wincomponents.json  xinput_virtual.tzst  xinput_virtual_arm64ec.tzst
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/winlator/: evshim.c  gpu_image.c  process_lifecycle.c  vulkan.c
app/src/main/feature/settings/containers/: ContainerSettingsComposeDialog.kt  ContainersScreen.kt
app/src/main/feature/settings/contents/: ComponentsScreen.kt  ContentsFragment.kt
app/src/main/feature/settings/debug/: DebugDialog.java  DebugFragment.kt  DebugScreen.kt
app/src/main/feature/settings/drivers/: DXVKConfigUtils.java  DriversFragment.kt  DriversScreen.kt
app/src/main/feature/setup/: SetupWizardActivity.kt
app/src/main/feature/shortcuts/: LibraryShortcutArtwork.kt  LibraryShortcutUtils.kt  ShortcutSettingsComposeDialog.kt  ShortcutsFragment.java
app/src/main/feature/steamcloudsync/: CloudSyncConflictDialog.kt  SteamAutoCloud.kt  SteamCloudConflictUi.kt  SteamCloudSyncHelper.kt  SteamExitCloudSync.kt  SteamLaunchCloudSync.kt
app/src/main/feature/sync/: CloudSyncHelper.kt
app/src/main/res/drawable/: combo_box.xml  content_asset_row_surface.xml  ic_content_env_var.xml  ic_content_menu_backups.xml  ic_controls_analog.xml  ic_controls_duplicate.xml  ic_controls_edit.xml  ic_controls_export.xml  ic_controls_import.xml  ic_controls_opacity.xml  ic_controls_trigger.xml  ic_dropdown_arrow.xml  ic_dropdown_arrow_light.xml  ic_image.xml  icon_add.xml  icon_cpu.xml  icon_debug.xml  icon_hide.xml  icon_info.xml  icon_list_item_menu.xml  icon_move.xml  icon_pause.xml  icon_play.xml  icon_popup_menu_bring_to_front.xml  icon_remove.xml  icon_settings.xml  icon_task_manager.xml  icon_zoom_minus.xml  icon_zoom_plus.xml  rounded_ripple_accent.xml  spinner_dropdown_background.xml  spinner_dropdown_divider.xml
app/src/main/res/layout/: add_driver_repo_dialog.xml  adrenotools_asset_list_item.xml  adrenotools_fragment.xml  adrenotools_release_list_item.xml  advanced_fragment.xml  compact_single_choice_item.xml  container_detail_fragment.xml  content_list_item.xml  contents_fragment.xml  control_element_settings.xml  controls_action_card.xml  controls_analog_sticks_card.xml  controls_binding_row_item.xml  controls_editor_activity.xml  controls_external_controller_card.xml  controls_gyroscope_card.xml  controls_profile_card.xml  controls_setting_chips_card.xml  controls_setting_slider_card.xml  controls_setting_toggle_card.xml  custom_toast.xml  external_controller_list_item.xml  graphics_driver_config_dialog.xml  input_controls_fragment_v2.xml  main_activity.xml  presets_fragment.xml  process_info_list_item.xml  settings_fragment.xml  shortcut_settings_dialog.xml  spinner_dropdown_item_themed.xml  spinner_item_themed.xml  task_manager_dialog.xml
app/src/main/res/menu/: container_popup_menu.xml  containers_menu.xml  driver_popup_menu.xml  shortcut_popup_menu.xml  xserver_menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  plurals.xml  refs.xml  strings.xml  styles.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pl/: arrays.xml  strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-v27/: styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: locales_config.xml
app/src/main/runtime/container/: Container.java  ContainerData.kt  ContainerManager.java  Shortcut.java
app/src/main/runtime/content/: AdrenotoolsManager.java
app/src/main/runtime/display/: XServerDisplayActivity.java  XServerDrawerMenu.kt
app/src/main/runtime/input/: ControlsEditorActivity.java  InputControlsDialog.kt  InputControlsDialogContent.kt
app/src/main/runtime/system/: ProcessHelper.java
app/src/main/runtime/wine/: MSLink.java  WineLocaleUtils.kt  WineRequestHandler.java  WineUtils.java
app/src/main/shared/android/: AppTerminationHelper.kt  CursorLocker.java  DirectoryPickerDialog.kt  FixedFontScaleActivity.kt  RefreshRateUtils.java  StoragePathUtils.kt
app/src/main/shared/io/: FileUtils.java
app/src/main/shared/math/: Mathf.java
gradle/: libs.versions.toml
tools/xinput_virtual_shim/: build.sh  xinput_virtual.c
(+186 files in other folders)
